--- a/web/templates/_base.html
+++ b/web/templates/_base.html
@@ -28,6 +28,7 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Dashboard</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('genereer_xml') }}">Genereer XML</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('genereer_xml_json') }}">JSON naar XML</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('resultaten_pagina') }}">Resultaten</a></li>
                 </ul>
                 <div class="d-flex align-items-center gap-2">
